<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
        name="retryOnClick"
        type="android.view.View.OnClickListener" />

    <variable
        name="openSettingsOnClick"
        type="android.view.View.OnClickListener" />

    <variable
        name="visible"
        type="Boolean" />
  </data>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="#D9131313"
      android:gravity="center"
      android:orientation="vertical"
      android:padding="@dimen/default_margin"
      app:visibleOrGone="@{visible}">

    <TextView
        style="@style/style_14_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_internet" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:backgroundTint="@color/green"
        android:onClick="@{retryOnClick}"
        android:text="@string/retry" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:backgroundTint="@color/dark_gray"
        android:onClick="@{openSettingsOnClick}"
        android:text="@string/open_wifi_settings" />
  </LinearLayout>
</layout>